# maplibre-native

./: .bazelignore  .bazelrc  .clang-format  .clang-tidy  .cmake-format  .gitattributes  .gitignore  .gitignore.swp  .gitmodules  .npmignore  .pre-commit-config.yaml  ACCOMPLISHMENTS.md  AGENTS.md  ARCHITECTURE.md  BUILD.bazel  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CRASH.MD  DEVELOPING.md  DartConfiguration.tcl  Dockerfile_Build  FORK.md  GITHUB_SETUP.md  HEAP_CORRUPTION_FIXES.md  LICENSE.mbgl-core.md  LICENSE.md  LICENSES.core.md  LICENSES.md  MODULE.bazel  Makefile  README.md  SECURITY.md  SITUATION.md  TERRAIN.md  UPSTREAM.md  WEBGPU_BACKEND.md  WEBGPU_CRASH_FIXES.md  (+64 more)
examples/: CMakeLists.txt  dawn_webgpu_triangle.mm  glfw_opengl_triangle.cpp  simple_dawn_webgpu.cpp  webgpu_dawn_minimal.cpp  webgpu_dawn_simple.mm  webgpu_dawn_triangle.cpp  webgpu_dawn_triangle.mm  webgpu_example.cpp  webgpu_glfw_example.cpp  webgpu_glfw_example.mm  webgpu_glfw_standalone.cpp  webgpu_map.cpp  webgpu_map.mm  webgpu_map_simple.mm  webgpu_render_demo.mm
expression-test/: BUILD.bazel  CMakeLists.txt  expression_test_logger.cpp  expression_test_logger.hpp  expression_test_parser.cpp  expression_test_parser.hpp  expression_test_runner.cpp  expression_test_runner.hpp  filesystem.hpp  main.cpp  test_runner_common.cpp  test_runner_common.hpp
map-renderer/: .clang-format  CMakeLists.txt  Dockerfile  LICENSE  README.md
map-renderer/include/: maprenderer.h
map-renderer/src/: main.cpp  maprenderer.cpp  spng.c
metrics/: BUILD.bazel  android-render-test-runner-metrics.json  android-render-test-runner-style.json  android-vulkan-render-test-runner-metrics.json  android-vulkan-render-test-runner-style.json  cache-metrics.db  ios-metal-render-test-runner-metrics.json  ios-metal-render-test-runner-style.json  ios-render-test-runner-metrics.json  ios-render-test-runner-style.json  linux-clang8-release-metrics.json  linux-clang8-release-style.json  linux-drawable.json  linux-gcc8-debug-coverage-style.json  linux-gcc8-release-metrics.json  linux-gcc8-release-style.json  linux-legacy-style.json  linux-legacy.json  linux-opengl.json  linux-tsan-style.json  linux-ubsan-style.json  linux-vulkan.json  linux-webgpu-dawn.json  linux-webgpu-wgpu.json  linux-webgpu.json  macos-terrain-style.json  macos-webgpu-dawn.json  macos-webgpu-wgpu.json  macos-webgpu.json  macos-xcode11-debug-style.json  macos-xcode11-release-metrics.json  macos-xcode11-release-style.json  windows-egl.json  windows-opengl.json  windows-vulkan.json
metrics/ignores/: linux-drawable.json  linux-vulkan.json  platform-all.json  platform-android-vulkan.json  platform-android.json  platform-ios-metal.json  platform-ios.json  platform-linux-vulkan.json  platform-linux.json  platform-macos-webgpu.json  platform-macos.json  windows-egl.json  windows-opengl.json  windows-vulkan.json
metrics/integration/: README.md  testem_page.html
platform/: BUILD.bazel  README.md
platform/android/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPING.md  DISTRIBUTE.md  LICENSE.md  Makefile  README.md  RELEASE.md  TESTS.md  VERSION  android.cmake  build.gradle  build.gradle.kts  checkstyle.xml  gradle.properties  mkdocs.yaml  package-lock.json  package.json  settings.gradle  settings.gradle.kts
platform/darwin/: .gitignore  BUILD.bazel  README.md  darwin.cmake  darwin.xcconfig
platform/default/: BUILD.bazel
platform/glfw/: BUILD.bazel  CMakeLists.txt  example_custom_drawable_style_layer.cpp  example_custom_drawable_style_layer.h  example_custom_drawable_style_layer.hpp  glfw_apple_init.mm  glfw_gl_backend.cpp  glfw_gl_backend.hpp  glfw_metal_backend.cpp  glfw_metal_backend.h  glfw_metal_backend.hpp  glfw_metal_backend.mm  glfw_renderer_frontend.cpp  glfw_renderer_frontend.hpp  glfw_view.cpp  glfw_view.hpp  glfw_vulkan_backend.cpp  glfw_vulkan_backend.hpp  glfw_webgpu_backend.cpp  glfw_webgpu_backend.hpp  glfw_webgpu_backend.mm  glfw_webgpu_backend_impl.ipp  main.cpp  metal_backend.h  metal_backend.mm  settings_json.cpp  settings_json.hpp  test_writer.cpp
platform/ios/: .cmake-format  .gitignore  .npmignore  BAZEL.md  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DEVELOPING.md  INSTALL.md  LICENSE.md  Makefile  MapLibre.podspec  Mapbox-iOS-SDK-snapshot-dynamic.podspec  Mapbox-iOS-SDK-stripped.podspec  Mapbox-iOS-SDK.podspec  PrivacyInfo.xcprivacy  README.md  RELEASE.md  VERSION  common.xcconfig  ios-test-runners.cmake  ios.cmake  ios.toolchain.cmake  ios.xcconfig  jazzy.yml  maccatalyst.toolchain.cmake  package-lock.json  package.json  sdk-files.json  testall.sh
platform/linux/: BUILD.bazel  Dockerfile  Dockerfile.dockerignore  README.md  linux.cmake  startup.sh
platform/macos/: .gitignore  BUILD.bazel  CHANGELOG.md  DEVELOPING.md  INSTALL.md  Mapbox-macOS-SDK-symbols.podspec  Mapbox-macOS-SDK.podspec  README.md  jazzy.yml  macos.cmake  sdk-files.json
platform/node/: CHANGELOG.md  CMakeLists.txt  DEVELOPING.md  README.md  RELEASE.md  index.d.ts  index.js  package-binaries.js  package-lock.json  package.json
platform/ohos/: README.md  ohos.cmake
platform/plugin/: BUILD.bazel  plugins.bzl
platform/plugins/: BUILD.bazel  CMakeLists.txt
platform/qml/: CMakeLists.txt  maplibregl.qrc  maplibregl_plugin.json  qgeomapmaplibregl.cpp  qgeomapmaplibregl.h  qgeomapmaplibregl_p.h  qgeomappingmanagerenginemaplibregl.cpp  qgeomappingmanagerenginemaplibregl.h  qgeoserviceproviderpluginmaplibregl.cpp  qgeoserviceproviderpluginmaplibregl.h  qmaplibreglstylechange.cpp  qmaplibreglstylechange_p.h  qsgmaplibreglnode.cpp  qsgmaplibreglnode.h
platform/qt/: CHANGELOG.md  README.md  qt.cmake  (+3 more)
render-test/: BUILD.bazel  CMakeLists.txt  allocation_index.cpp  allocation_index.hpp  file_source.cpp  file_source.hpp  filesystem.hpp  manifest_parser.cpp  manifest_parser.hpp  metadata.hpp  parser.cpp  parser.hpp  render_test.cpp  runner.cpp  runner.hpp
rustutils/: BUILD.bazel  Cargo.toml  LICENSE-MIT  MODULE.bazel  README.md  generate.sh  justfile  rustutils.cmake
test/: .clang-tidy  BUILD.bazel  CMakeLists.txt
(+25016 files in other folders)
